Java 17 이상 deprecated 대응